2008-08-19  David Bateman  <dbateman@free.fr>

	statistics/base/ranks.m: Doc fix.

2008-08-08  John W. Eaton  <jwe@octave.org>

	* general/Makefile.in (SOURCES): Add cellidx.m to the list.

2008-08-07  John W. Eaton  <jwe@octave.org>

	* gethelp.cc: Delete definition of NPOS.

2008-08-04  John W. Eaton  <jwe@octave.org>

	* strings/strtok.m: Include TAB, LF, VT, FF, and CR in default
	list of delim characters.  Update tests.

2008-07-29  John W. Eaton  <jwe@octave.org>

	* plot/axis.m (__get_tight_lims__): Use strcat instead of [].
	Don't fail if data is not a vector.

2008-07-29  David Bateman  <dbateman@free.fr>

	* general/cellidx.m: reinclude from control toolbox, as used by
	print command. Replace is_signal_list with iscellstr.
	* general/quadqk.m, linear-algebra/planeror.m,
	miscellaneous/namelengthmax.m, specfun/realpow.m: Miscellaneous
	documentation fixes.

	* control, finance, quaternion: Remove directories and all of the
	files they contain.
	* Makefile.in: Remove all references to the above directories.
	* configure.in: ditto.

2008-07-28  Ben Abbott <bpabbott@mac.com>

	* plot/hold.m: Clarify help text.

	* specfun/reallog.m: Fix help string.

2008-07-28  David Bateman  <dbateman@free.fr>

	* strings/regexptranslate.m: Add real documentation.

	* plot/contourf.m: Allow X,Y to be unequal vectors.

	* plot/shading.m: Clarify help string.
	
	* general/genvarname.m: Trivial documentation fix.

2008-07-28  John W. Eaton  <jwe@octave.org>

	* image/imwrite.m: New function.
	* image/Makefile.in (SOURCES): Add it to the list.

2008-07-24  Ben Abbott  <bpabbott@mac.com>

	* time/datestr.m: New xtest.

2008-07-21  Michael Goffioul  <michael.goffioul@gmail.com>

	* plot/closereq.m: Use first gcbf to get the handle of the figure to
	be closed.
	* plot/close.m: Call __go_execute_callback__.

2008-07-17  John W. Eaton  <jwe@octave.org>

	* general/fliplr.m: Fix usage test.
	* testfun/test.m: Fix usage tests.

2008-07-17  Jaroslav Hajek <highegg@gmail.com>
